[FIX] Added nowrap style to all material titles

--- a/indico/htdocs/css/events/common.css
+++ b/indico/htdocs/css/events/common.css
@@ -698,3 +698,7 @@ span.description pre, p {
     margin-left: 0;
     overflow: hidden;
 }
+
+.materialDisplayName {
+    white-space: nowrap;
+}
